project/manifests/base/deployment_broadcaster.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-broadcaster-deployment
spec:
  replicas: 6
  selector:
    matchLabels:
      app: broadcaster
  template:
    metadata:
      labels:
        app: broadcaster
    spec:
      containers:
        - name: broadcaster
          image: azska/dvk_project_broadcaster:4.6
