project/manifests/base/service_backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-backend-service
spec:
  type: ClusterIP
  selector:
    app: todo-app-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8001
